--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -19,3 +19,5 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Print the default envs
+        run: printenv
